# LibBitmap

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/genesis/imagejni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ImageNativeImpl.cpp  ImageNativeImpl.h  aopencl.c  aopencl.h
app/src/main/cpp/BitmapFactory/: GNBitmapContast.h  GNCore.cpp  GNCore.h
app/src/main/cpp/BitmapFactory/BitmapFilter/: Filter.cpp  Filter.h
app/src/main/cpp/BitmapFactory/BitmapParse/: BitmapParse.cpp  BitmapParse.h
app/src/main/cpp/BitmapFactory/BitmapUtills/: BitmapUtills.cpp  BitmapUtills.h  Matrix.cpp  Matrix.h
app/src/main/cpp/BitmapFactory/Blur/: Blur.cpp  Blur.h
app/src/main/cpp/BitmapFactory/Conversion/: AffineTransform.cpp  AffineTransform.h  ConversionTransForm.cpp  ConversionTransForm.h  PerspectiveTransform.cpp  PerspectiveTransform.h  WarpPerspective.cpp  WarpPerspective.h
app/src/main/cpp/BitmapFactory/GNBitmap/: GNBitmap.cpp  GNBitmap.h
app/src/main/cpp/CL/: cl.h  cl_ext.h  cl_gl.h  cl_gl_ext.h
app/src/main/java/com/cocos2d/cocosdemo/: NativeFunc.java
app/src/main/java/com/genesis/imagejni/: MainActivity.java  MySurfaceView.java
app/src/main/java/com/genesis/imagejni/imageLib/: ImageImpl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/genesis/imagejni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
